--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Nilwala Ticket Master Portal"
+      content="Connect with Nilwala Leos | Official Website of the Leo Club of Matara Nilwala"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
